--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1> i'm first usre github</h1>
     <h2> ihis is my first github uplode file</h2>
     <h> I'm new commer in website</h>
+    <img src="map.png">
 </body>
 </html>
