--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h2> ihis is my first github uplode file</h2>
     <h> I'm new commer in website</h>
     <img src="map.png">
+    <p> আয়তন ও অবস্থান
+        <b>নোয়াখালী</b> জেলার মোট আয়তন ৪২০২.৭০ বর্গ কিলোমিটার।[৩][৪] বাংলাদেশের দক্ষিণ-পূর্বাংশে ২২°০৭' থেকে ২৩°০৮' উত্তর অক্ষাংশ এবং ৯০°৫৩' থেকে ৯১°২৭' পূর্ব দ্রাঘিমাংশ জুড়ে নোয়াখালী জেলার অবস্থান।[৩] রাজধানী ঢাকা থেকে এ জেলার দূরত্ব প্রায় ১৭১ কিলোমিটার এবং চট্টগ্রাম বিভাগীয় সদর থেকে প্রায় ১৩৬ কিলোমিটার। এ জেলার পূর্বে চট্টগ্রাম জেলা ও ফেনী জেলা, উত্তরে কুমিল্লা জেলা, পশ্চিমে লক্ষ্মীপুর জেলা ও ভোলা জেলা এবং দক্ষিণে বঙ্গোপসাগর অবস্থিত।</p>
 </body>
 </html>
