edit first user

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> It's My First Web </h1>
-    <h1> i'm first usre github</h1>
+    <h1> i'm first user github</h1>
     <h2> ihis is my first github uplode file</h2>
     <h> I'm new commer in website</h>
     <img src="map.png">
